bit-blog/templates/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mystatefulset
spec:
  selector:
    matchLabels:
      app: statefulservice
  serviceName: statefulservice
  replicas: 1
  template:
    metadata:
      labels:
        app: statefulservice
    spec:
      containers:
      - name: statefulservice
        image: mysql:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 3Gi
