bit-blog/templates/statefulservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: statefulservice
spec:
  clusterIP: None
  selector:
    app: statefulservice
  ports:
  - port: 3306
    targetPort: 3306
