bit-blog/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    name: myingress
spec:
  rules:
  - host: bit.kloudninja.online 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bit-blog-service
            port:
              number: 80
  - host: phpmyadmin.kloudninja.online 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pma-service
            port:
              number: 80

  tls:
      - hosts:
          - bit.kloudninja.online 
          - phpmyadmin.kloudninja.online
        secretName: tls-2048-kibana
